* Fixed players connecting not visible

--- a/content/dota_addons/dota_imba_reborn/panorama/styles/custom_game/custom_loading_screen.css
+++ b/content/dota_addons/dota_imba_reborn/panorama/styles/custom_game/custom_loading_screen.css
@@ -13,7 +13,7 @@
 .addon-root {
 	width: 100%;
 	height: 100%;
-	z-index: 1;
+//	z-index: 1;
 }
 
 .down {
